[gd_scene load_steps=6 format=3 uid="uid://dqpseoq3i7cs4"]

[ext_resource type="PackedScene" uid="uid://b182o6a4m836y" path="res://Scenes/base_template_screen.tscn" id="1_sk5pj"]
[ext_resource type="Script" uid="uid://dbdev05si0lim" path="res://Scenes/Dashboard/filter_panel.gd" id="2_0b8t0"]
[ext_resource type="Texture2D" uid="uid://ci233jqwsqnh6" path="res://FlovertimeTheme/Widgets/Arrows/arrow_left.png" id="2_ia7dg"]
[ext_resource type="Script" uid="uid://b3mbtqaduuuyy" path="res://Scenes/Dashboard/dashboard_screen.gd" id="2_vduoj"]
[ext_resource type="Texture2D" uid="uid://cb4tg4s3yfjx6" path="res://FlovertimeTheme/Widgets/Arrows/arrow_right.png" id="3_hp78i"]

[node name="DashboardScreen" instance=ExtResource("1_sk5pj")]
script = ExtResource("2_vduoj")
animated_container = NodePath("ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer")

[node name="AutoMarginContainer" parent="ScrollContainer/CenterContainer" index="0"]
custom_minimum_size = Vector2(1500.8, 0)
max_viewport_percent = 80
min_width = 800
max_width = 3400

[node name="MainContainer" parent="ScrollContainer/CenterContainer/AutoMarginContainer" index="0" node_paths=PackedStringArray("elements")]
duration = 0.25
elements = [NodePath("FilterPanel"), NodePath("ContentContainer")]

[node name="FilterPanel" type="PanelContainer" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer" index="0"]
z_index = 1
layout_mode = 2
theme_type_variation = &"Header_Panel"
script = ExtResource("2_0b8t0")

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer/FilterPanel" index="0"]
layout_mode = 2
alignment = 1

[node name="PreviousDate" type="TextureButton" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer/FilterPanel/HBoxContainer" index="0"]
layout_mode = 2
texture_normal = ExtResource("2_ia7dg")
stretch_mode = 3

[node name="DateLabel" type="Label" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer/FilterPanel/HBoxContainer" index="1"]
layout_mode = 2
text = "May 2025"

[node name="NextDate" type="TextureButton" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer/FilterPanel/HBoxContainer" index="2"]
layout_mode = 2
texture_normal = ExtResource("3_hp78i")
stretch_mode = 3

[node name="ContentContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimesContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer/ContentContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SideContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/AutoMarginContainer/MainContainer/ContentContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
